// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountForm renders as expected with add 1`] = `
<div>
  <form>
    <div
      class="grid grid-cols-12 text-sm my-5 gap-2"
    >
      <fieldset
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="nameInput"
        >
          Name
        </label>
        <input
          class="w-full m-0"
          id="nameInput"
          name="name"
          type="text"
        />
        <p
          class="invalid-feedback"
        />
      </fieldset>
      <fieldset
        class="col-start-8 col-span-2 hidden"
      >
        <label
          class="inline-block mb-2"
          for="hiddenInput"
        >
          Hide
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="hidden-help"
        >
          ?
        </span>
        <input
          class="block m-0"
          id="hiddenInput"
          name="hidden"
          type="checkbox"
        />
      </fieldset>
    </div>
    <fieldset
      class="text-sm my-5"
    >
      <label
        class="inline-block mb-2"
        for="parent"
      >
        Parent
      </label>
      <div
        class="selector css-b62m3t-container"
        id="parentInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          class="selector__control css-13cymwt-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-2-placeholder"
            >
              &lt;parent account&gt;
            </div>
            <div
              class="!text-inherit selector__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-2-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="parentInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                id="react-select-2-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="parentInput"
          type="hidden"
          value=""
        />
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <fieldset
      class="text-sm my-5"
    >
      <label
        class="inline-block mb-2"
        for="type"
      >
        Account type
      </label>
      <div
        class="selector selector--is-disabled css-3iigni-container"
        id="typeInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          aria-disabled="true"
          class="selector__control selector__control--is-disabled css-16xfy0z-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-3-placeholder"
            >
              &lt;select parent first&gt;
            </div>
            <div
              class="!text-inherit selector__input-container css-1h01tm3-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-3-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="typeInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                disabled=""
                id="react-select-3-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-894a34-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <fieldset
      class="grid grid-cols-12 text-sm my-5 hidden"
    >
      <div
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="balanceInput"
        >
          Opening balance
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="balance-help"
        >
          ?
        </span>
        <input
          class="block w-full h-[38px] m-0 rounded-r-none"
          id="balanceInput"
          name="balance"
          step="0.001"
          type="number"
        />
        <p
          class="invalid-feedback"
        />
      </div>
      <div
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="dateInput"
        >
          When
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="date-help"
        >
          ?
        </span>
        <input
          class="block w-full m-0 rounded-l-none"
          id="dateInput"
          name="balanceDate"
          type="date"
          value="2023-01-30"
        />
        <p
          class="invalid-feedback"
        />
      </div>
    </fieldset>
    <fieldset
      class="text-sm my-5 hidden"
    >
      <label
        class="inline-block mb-2"
        for="commodity"
      >
        Commodity
      </label>
      <div
        class="selector css-b62m3t-container"
        id="commodityInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-4-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          class="selector__control css-13cymwt-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-4-placeholder"
            >
              Choose a commodity for the account
            </div>
            <div
              class="!text-inherit selector__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-4-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="commodityInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                id="react-select-4-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="commodityInput"
          type="hidden"
          value=""
        />
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <input
      hidden=""
      name="guid"
      type="text"
    />
    <div
      class="flex w-full justify-center"
    >
      <button
        class="btn capitalize btn-primary"
        type="submit"
      >
        add
      </button>
    </div>
  </form>
</div>
`;

exports[`AccountForm renders as expected with delete 1`] = `
<div>
  <form>
    <div
      class="grid grid-cols-12 text-sm my-5 gap-2"
    >
      <fieldset
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="nameInput"
        >
          Name
        </label>
        <input
          class="w-full m-0"
          disabled=""
          id="nameInput"
          name="name"
          type="text"
        />
        <p
          class="invalid-feedback"
        />
      </fieldset>
      <fieldset
        class="col-start-8 col-span-2"
      >
        <label
          class="inline-block mb-2"
          for="hiddenInput"
        >
          Hide
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="hidden-help"
        >
          ?
        </span>
        <input
          class="block m-0"
          disabled=""
          id="hiddenInput"
          name="hidden"
          type="checkbox"
        />
      </fieldset>
    </div>
    <fieldset
      class="text-sm my-5"
    >
      <label
        class="inline-block mb-2"
        for="parent"
      >
        Parent
      </label>
      <div
        class="selector selector--is-disabled css-3iigni-container"
        id="parentInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-8-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          aria-disabled="true"
          class="selector__control selector__control--is-disabled css-16xfy0z-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-8-placeholder"
            >
              &lt;parent account&gt;
            </div>
            <div
              class="!text-inherit selector__input-container css-1h01tm3-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-8-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="parentInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                disabled=""
                id="react-select-8-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-894a34-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <fieldset
      class="text-sm my-5"
    >
      <label
        class="inline-block mb-2"
        for="type"
      >
        Account type
      </label>
      <div
        class="selector selector--is-disabled css-3iigni-container"
        id="typeInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-9-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          aria-disabled="true"
          class="selector__control selector__control--is-disabled css-16xfy0z-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-9-placeholder"
            >
              &lt;select parent first&gt;
            </div>
            <div
              class="!text-inherit selector__input-container css-1h01tm3-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-9-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="typeInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                disabled=""
                id="react-select-9-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-894a34-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <fieldset
      class="grid grid-cols-12 text-sm my-5 hidden"
    >
      <div
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="balanceInput"
        >
          Opening balance
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="balance-help"
        >
          ?
        </span>
        <input
          class="block w-full h-[38px] m-0 rounded-r-none"
          disabled=""
          id="balanceInput"
          name="balance"
          step="0.001"
          type="number"
        />
        <p
          class="invalid-feedback"
        />
      </div>
      <div
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="dateInput"
        >
          When
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="date-help"
        >
          ?
        </span>
        <input
          class="block w-full m-0 rounded-l-none"
          id="dateInput"
          name="balanceDate"
          type="date"
          value="2023-01-30"
        />
        <p
          class="invalid-feedback"
        />
      </div>
    </fieldset>
    <fieldset
      class="text-sm my-5 hidden"
    >
      <label
        class="inline-block mb-2"
        for="commodity"
      >
        Commodity
      </label>
      <div
        class="selector selector--is-disabled css-3iigni-container"
        id="commodityInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-10-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          aria-disabled="true"
          class="selector__control selector__control--is-disabled css-16xfy0z-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-10-placeholder"
            >
              Choose a commodity for the account
            </div>
            <div
              class="!text-inherit selector__input-container css-1h01tm3-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-10-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="commodityInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                disabled=""
                id="react-select-10-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-894a34-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <input
      hidden=""
      name="guid"
      type="text"
    />
    <div
      class="flex w-full justify-center"
    >
      <button
        class="btn capitalize btn-danger"
        type="submit"
      >
        delete
      </button>
    </div>
  </form>
</div>
`;

exports[`AccountForm renders as expected with update 1`] = `
<div>
  <form>
    <div
      class="grid grid-cols-12 text-sm my-5 gap-2"
    >
      <fieldset
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="nameInput"
        >
          Name
        </label>
        <input
          class="w-full m-0"
          id="nameInput"
          name="name"
          type="text"
        />
        <p
          class="invalid-feedback"
        />
      </fieldset>
      <fieldset
        class="col-start-8 col-span-2"
      >
        <label
          class="inline-block mb-2"
          for="hiddenInput"
        >
          Hide
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="hidden-help"
        >
          ?
        </span>
        <input
          class="block m-0"
          id="hiddenInput"
          name="hidden"
          type="checkbox"
        />
      </fieldset>
    </div>
    <fieldset
      class="text-sm my-5"
    >
      <label
        class="inline-block mb-2"
        for="parent"
      >
        Parent
      </label>
      <div
        class="selector css-b62m3t-container"
        id="parentInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-5-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          class="selector__control css-13cymwt-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-5-placeholder"
            >
              &lt;parent account&gt;
            </div>
            <div
              class="!text-inherit selector__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-5-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="parentInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                id="react-select-5-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="parentInput"
          type="hidden"
          value=""
        />
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <fieldset
      class="text-sm my-5"
    >
      <label
        class="inline-block mb-2"
        for="type"
      >
        Account type
      </label>
      <div
        class="selector selector--is-disabled css-3iigni-container"
        id="typeInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-6-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          aria-disabled="true"
          class="selector__control selector__control--is-disabled css-16xfy0z-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-6-placeholder"
            >
              &lt;select parent first&gt;
            </div>
            <div
              class="!text-inherit selector__input-container css-1h01tm3-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-6-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="typeInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                disabled=""
                id="react-select-6-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-894a34-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <fieldset
      class="grid grid-cols-12 text-sm my-5 hidden"
    >
      <div
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="balanceInput"
        >
          Opening balance
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="balance-help"
        >
          ?
        </span>
        <input
          class="block w-full h-[38px] m-0 rounded-r-none"
          id="balanceInput"
          name="balance"
          step="0.001"
          type="number"
        />
        <p
          class="invalid-feedback"
        />
      </div>
      <div
        class="col-span-6"
      >
        <label
          class="inline-block mb-2"
          for="dateInput"
        >
          When
        </label>
        <span
          class="badge ml-0.5"
          data-tooltip-id="date-help"
        >
          ?
        </span>
        <input
          class="block w-full m-0 rounded-l-none"
          id="dateInput"
          name="balanceDate"
          type="date"
          value="2023-01-30"
        />
        <p
          class="invalid-feedback"
        />
      </div>
    </fieldset>
    <fieldset
      class="text-sm my-5 hidden"
    >
      <label
        class="inline-block mb-2"
        for="commodity"
      >
        Commodity
      </label>
      <div
        class="selector selector--is-disabled css-3iigni-container"
        id="commodityInput"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-7-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          aria-disabled="true"
          class="selector__control selector__control--is-disabled css-16xfy0z-control"
        >
          <svg
            class="absolute text-md left-[10px]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
            />
          </svg>
          <div
            class="selector__value-container css-1fdsijx-ValueContainer"
          >
            <div
              class="selector__placeholder css-1jqq78o-placeholder"
              id="react-select-7-placeholder"
            >
              Choose a commodity for the account
            </div>
            <div
              class="!text-inherit selector__input-container css-1h01tm3-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-7-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="commodityInput"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="selector__input"
                disabled=""
                id="react-select-7-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="selector__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="hidden selector__indicator-separator css-894a34-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="selector__indicator selector__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="invalid-feedback"
      />
    </fieldset>
    <input
      hidden=""
      name="guid"
      type="text"
    />
    <div
      class="flex w-full justify-center"
    >
      <button
        class="btn capitalize btn-warn"
        type="submit"
      >
        update
      </button>
    </div>
  </form>
</div>
`;
